# dc-prototype

./: .gitignore  Cargo.toml  README.md  bench2.txt  benchmarks.txt  bigsad.txt  manyclient.txt  requirements.txt  rust_choices.md  ycsbresults.txt
dc-prototype/: dc_metadata_pb2.py  dc_record_pb2.py
fakep2p/: Cargo.toml
fakep2p/examples/: echo_server.rs  echo_server_config.json  interactive_client.rs
fakep2p/src/: lib.rs
playground/: Cargo.toml
playground/src/: crypto.rs  tokiotcpclient.rs
proto/: dc_metadata.proto  dc_record.proto
protos/: requests.proto  sign.proto  storage.proto
protos/requests/: create.proto  init.proto  read.proto  subscribe.proto  write.proto
pystuff/: datacapsule_client.py  datacapsule_server.py  reader_state.py  utils.py
python/: client.py  requirements.txt  server.py
python/protos/: requests_pb2.py  sign_pb2.py  storage_pb2.py
python/protos/requests/: create_pb2.py  init_pb2.py  read_pb2.py  subscribe_pb2.py  write_pb2.py
rbaseapi/: Cargo.toml
rbaseapi/benches/: local.rs  manyclient.rs  ycsb.rs
rbaseapi/env/: net_config.json
rbaseapi/examples/: interactive_client.rs
rbaseapi/src/: server_bin.rs
rbaseapi/src/client/: manager.rs  mod.rs  p2pclient.rs  writer.rs
rbaseapi/src/server/: anti_entropy.rs  manager.rs  storage.rs  subscriber.rs  withp2p.rs  writer.rs
rbaseapi/src/shared/: config.rs  crypto.rs  dc_repr.rs  readstate.rs  request.rs  witness_cache.rs
rbaseapi/tests/: basics.rs
rexpapi/: Cargo.toml
rexpapi/benches/: crypto.rs  local.rs  manyclient.rs  ycsb.rs
rexpapi/src/: server_bin.rs
rexpapi/src/client/: p2pclient.rs
rexpapi/src/server/: mod.rs  withp2p.rs  writer.rs
rexpapi/src/shared/: config.rs  merkle.rs
rustdc/: Cargo.toml
rustdc/benches/: crypto.rs  echo.rs  local.rs
rustdc/env/: net_config.json  server_private.pem
rustdc/examples/: interactive_client.rs
rustdc/src/: client.rs  config.rs  crypto.rs  lib.rs  merkle.rs  readstate.rs  request.rs  server.rs  server_bin.rs  storage.rs  tokiotcpclient.rs  writestate.rs
rustdc/src/base_client/: mod.rs  writer.rs
rustdc/src/base_server/: mod.rs  storage.rs  write_handler.rs
rustdc/src/client/: manager.rs  mod.rs  p2pclient.rs  reader.rs  subscriber.rs  writer.rs
rustdc/src/client_internal/: creator.rs  mod.rs  reader.rs  subscriber.rs  writer.rs
rustdc/src/misc/: messaround.rs  tokioserver.rs  tokiotcpclient.rs
rustdc/src/server/: client_thread.rs  manager.rs  mod.rs  reader.rs  storage.rs  subscriber.rs  withp2p.rs  writer.rs
rustdc/src/server_internal/: mod.rs  reader.rs  storage.rs  writer.rs
rustdc/src/shared/: config.rs  crypto.rs  dc_repr.rs  merkle.rs  mod.rs  request.rs
rustdc/tests/: basics.rs
