[package]
name = "fakep2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "echo_server"

[[example]]
name = "interactive_client"

[dependencies]
serde = "1.0.193"
postcard = {version = "1.0.8", features = ["use-std"]}
tokio = { version = "1.34.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
serde_json = "1.0.108"
