[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.60"
tokio = { version = "1.34.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tokio-stream = "0.1.14"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "crypto"
path = "src/crypto.rs"

[[bin]]
name = "tokiotcpclient"
path = "src/tokiotcpclient.rs"

[[bin]]
name = "tokioserver"
path = "src/tokioserver.rs"
