[package]
name = "rexpapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datacapsule"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server_bin.rs"

[[example]]
name = "interactive_client"

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "echo"
harness = false

[[bench]]
name = "local"
harness = false

[[bench]]
name = "manyclient"
harness = false

[[bench]]
name = "ycsb"
harness = false

[dependencies]
openssl = "0.10.59"
tokio = { version = "1.34.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tokio-stream = "0.1.14"
serde = "1.0.193"
postcard = {version = "1.0.8", features = ["use-std"]}
sled = "0.34.7"
fakep2p = { path = "../fakep2p" }
serde_json = "1.0.108"

[dev-dependencies]
criterion = "0.5.1"
