[package]
name = "rustdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clientlib"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "messaround"
path = "src/misc/messaround.rs"

[[bin]]
name = "tokiotcpclient"
path = "src/misc/tokiotcpclient.rs"

[[bin]]
name = "tokioserver"
path = "src/misc/tokioserver.rs"

[dependencies]
openssl = "0.10.59"
tokio = { version = "1.34.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-util = { version = "0.7.10", features = ["codec"] }
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tokio-stream = "0.1.14"
serde = "1.0.193"
postcard = {version = "1.0.8", features = ["use-std"]}
sled = "0.34.7"
